fix: better text contrast with player image

--- a/config/ags/media/media.css
+++ b/config/ags/media/media.css
@@ -13,8 +13,13 @@
     margin: 0px;
 }
 
+.MediaPlayerBackgroundBox {
+    background-color: transparent;
+    border-radius: 5px;
+}
+
 .MediaPlayer {
-    background-color: alpha(@color1, .4);
+    background-color: alpha(@background, .5);
     border-radius: 5px;
     padding: 10px;
 }
